--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 </div>
 
 <div class="imagen-grande">
-    <img src="https://media.themoviedb.org/t/p/w1280/phliRHzrDQapwqLFKuCDDNDYbXH.png" alt="" class="logo-img-grande">
-        <a href="" class="boton-ver-pelicula-imagen-grande"><svg class="play-svg" xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="0 0 24 24" fill="none">
+    <img src="https://media.themoviedb.org/t/p/w1280/bJUykqWBzpE7qYfmPsdMAKNa3Ap.png" alt="" class="logo-img-grande">
+        <a href="PELICULA/spider_Man_cruzando_el_multiverso.html" class="boton-ver-pelicula-imagen-grande"><svg class="play-svg" xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="0 0 24 24" fill="none">
             <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" />
             </svg> Play</a>
         <div class="degradado-imagen-grande"></div>
