--- a/PELICULA/spider_Man_cruzando_el_multiverso.html
+++ b/PELICULA/spider_Man_cruzando_el_multiverso.html
@@ -62,7 +62,7 @@
 
   </div>
   <div class="logo-img">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Spider-Man_Across_the_Spider-Verse_logo.webp/250px-Spider-Man_Across_the_Spider-Verse_logo.webp.png" alt="" class="logo-pelicula-serie">
+  <img src="https://image.tmdb.org/t/p/original/kFV7w6AfJogA5io4UyhGD4eNgyJ.png" alt="" class="logo-pelicula-serie">
 </div>
 <div class="resumen-descripcion">
   <p class="resumen">Resumen</p>
