--- a/PELICULA/padre_no_hay_mas_que_uno_3.html
+++ b/PELICULA/padre_no_hay_mas_que_uno_3.html
@@ -62,7 +62,7 @@
 
   </div>
   <div class="logo-img">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Spider-Man_Across_the_Spider-Verse_logo.webp/250px-Spider-Man_Across_the_Spider-Verse_logo.webp.pngg" alt="" class="logo-pelicula-serie">
+  <img src="https://image.tmdb.org/t/p/original/8TRG8X06DVnRb1SaPXAOTFLdI8z.png" alt="" class="logo-pelicula-serie">
 </div>
 <div class="resumen-descripcion">
   <p class="resumen">Resumen</p>
