--- a/PELICULA/deadpool_y_wolverine.html
+++ b/PELICULA/deadpool_y_wolverine.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="menu">
-    <div class="opciones-texto-svg">
+    <a href="../index.html"><div class="opciones-texto-svg">
         <svg class="iconos-svg" xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="0 0 24 24" fill="none">
 
             <path class="Logo-menu-svg-path" d="M22 12.2039V13.725C22 17.6258 22 19.5763 20.8284 20.7881C19.6569 22 17.7712 22 14 22H10C6.22876 22 4.34315 22 3.17157 20.7881C2 19.5763 2 17.6258 2 13.725V12.2039C2 9.91549 2 8.77128 2.5192 7.82274C3.0384 6.87421 3.98695 6.28551 5.88403 5.10813L7.88403 3.86687C9.88939 2.62229 10.8921 2 12 2C13.1079 2 14.1106 2.62229 16.116 3.86687L18.116 5.10812C20.0131 6.28551 20.9616 6.87421 21.4808 7.82274" stroke-width="1.5" stroke-linecap="round"></path>
@@ -18,7 +18,7 @@
         <p class="opciones-menu-p">
             Inicio
         </p>
-    </div>
+    </div></a>
     <div class="opciones-texto-svg">
         <svg class="iconos-svg" xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="0 0 24 24" fill="none">
             <path class="Logo-menu-svg-path" d="M18.6695 2H16.7695C14.5895 2 13.4395 3.15 13.4395 5.33V7.23C13.4395 9.41 14.5895 10.56 16.7695 10.56H18.6695C20.8495 10.56 21.9995 9.41 21.9995 7.23V5.33C21.9995 3.15 20.8495 2 18.6695 2Z" />
