--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
         <path d="M8.1716 8.00003L3.58582 3.41424L6.41424 0.585815L13.8285 8.00003L6.41424 15.4142L3.58582 12.5858L8.1716 8.00003Z" fill="#000000"/>
         </svg></p>
     <div class="imagenes-peliculas-series">
-        <a class="link-pelicula" href=""><img class="img-peliculas-series-img" src="https://media.themoviedb.org/t/p/w1000_and_h563_face/oMJBJZ5N4J84Z56B6oYNc77C1wL.jpg" alt=""></a>
+        <a class="link-pelicula" href="PELICULA/Mufasa.html"><img class="img-peliculas-series-img" src="https://media.themoviedb.org/t/p/w1000_and_h563_face/oMJBJZ5N4J84Z56B6oYNc77C1wL.jpg" alt=""></a>
         <a class="link-pelicula" href=""><img class="img-peliculas-series-img" src="https://media.themoviedb.org/t/p/w1000_and_h563_face/9TPE8OxQozui6weF2VM7WDGQ48t.jpg" alt=""></a>
         <a class="link-pelicula" href=""><img class="img-peliculas-series-img" src="https://media.themoviedb.org/t/p/w1000_and_h563_face/1jxm0N4l4qwFiN3Nq47BBnRABAa.jpg" alt=""></a>
-        <a class="link-pelicula" href="PELICULA/deadpool_y_wolverine.html"><img class="img-peliculas-series-img" src="https://media.themoviedb.org/t/p/w1000_and_h563_face/4dbuIpd2jHj0L4Tu2Uj7BTpiqBB.jpg" alt=""></a>
+        <a class="link-pelicula" href=""><img class="img-peliculas-series-img" src="https://media.themoviedb.org/t/p/w1000_and_h563_face/4dbuIpd2jHj0L4Tu2Uj7BTpiqBB.jpg" alt=""></a>
         <a class="link-pelicula" id="Img-ouculta"  href=""><img class="img-peliculas-series-img"src="https://media.themoviedb.org/t/p/w1000_and_h563_face/h92NAX7mEsa2aeOEUqin1ciCdJ8.jpg" alt=""></a>
-        <a class="link-pelicula" id="Img-ouculta" href=""><img class="img-peliculas-series-img" src="https://media.themoviedb.org/t/p/w1000_and_h563_face/jpiw4h4VeSXlPjn6cLzSEeT6vDE.jpg" alt=""></a>
+        <a class="link-pelicula" id="Img-ouculta" href="PELICULA/deadpool_y_wolverine.html"><img class="img-peliculas-series-img" src="https://media.themoviedb.org/t/p/w1000_and_h563_face/jpiw4h4VeSXlPjn6cLzSEeT6vDE.jpg" alt=""></a>
     </div>
 </div>
 
