--- a/PELICULA/Gladiador-11.html
+++ b/PELICULA/Gladiador-11.html
@@ -48,7 +48,7 @@
   <svg id="playButton" class="play-reproducir-svg" xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="0 0 24 24" fill="none">
     <path d="M3 12L3 18.9671C3 21.2763 5.53435 22.736 7.59662 21.6145L10.7996 19.8727M3 8L3 5.0329C3 2.72368 5.53435 1.26402 7.59661 2.38548L20.4086 9.35258C22.5305 10.5065 22.5305 13.4935 20.4086 14.6474L14.0026 18.131" />
     </svg>
-<video id="videoPlayer"  poster="https://m.media-amazon.com/images/M/MV5BMDI0ZDVhZmYtMDEwMS00YTY2LWIzOTItYWIzNDdjZWY3MGEzXkEyXkFqcGc@._V1_.jpg" src="https://1a-1791.com/video/s8/2/R/M/f/O/RMfOu.aaa.mp4" class="pelicula-mp4"></video>
+<video id="videoPlayer"  poster="https://image.tmdb.org/t/p/original/huXiPrdGqnxVv9R8os1xrvul4xA.jpg" src="https://1a-1791.com/video/s8/2/R/M/f/O/RMfOu.aaa.mp4" class="pelicula-mp4"></video>
 </div>
 
 <div class="informacion-pelicula-serie">
@@ -62,7 +62,7 @@
 
   </div>
   <div class="logo-img">
-  <img src="https://media.themoviedb.org/t/p/w1280/k8Xc2ghO7b6A850HuuBo5xt5D6k.png" alt="" class="logo-pelicula-serie">
+  <img src="https://media.themoviedb.org/t/p/w1280/phliRHzrDQapwqLFKuCDDNDYbXH.png" alt="" class="logo-pelicula-serie">
 </div>
 <div class="resumen-descripcion">
   <p class="resumen">Resumen</p>
